sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:13: error: value or is not a member of Boolean
    if(ecart==9 or ecart==10){
                ^