sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  var echanges:Boolean=true;
  var ecart:Int=getValueCount();
  var i:Int=0

  while((echanges==true) || ecart>1){
    echanges=false
    ecart = (ecart.toDouble / 1.3).toInt
    if(ecart<1){
      ecart=1;
    }
    if(ecart==9 or ecart==10){
        ecart=11;
    }
    for(i<-0 to getValueCount()-(ecart+1)){
    	if (isSmaller(i+ecart,i)){
        echanges=true;
      	swap(i,i+ecart);
    	}
  	}
	}
}